// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductInfoCAB should render a list of marketingDescriptions 1`] = `
<glamorous(div)>
  <glamorous(div)
    backgroundColor="#efefef"
    paddingTop="69px"
  >
    <glamorous(div)>
      <glamorous(div)
        fontSize="18px"
        lineHeight="28px"
      >
        <glamorous(div)
          fontSize="20px"
        >
          desc0
        </glamorous(div)>
        <p>
          foo
        </p>
        <p>
          bar
        </p>
      </glamorous(div)>
      <glamorous(div) />
    </glamorous(div)>
    <glamorous(div)>
      <glamorous(div)
        fontSize="18px"
        lineHeight="28px"
      >
        <glamorous(div)
          fontSize="20px"
        >
          desc1
        </glamorous(div)>
        <p>
          foobar
        </p>
      </glamorous(div)>
      <glamorous(div) />
    </glamorous(div)>
  </glamorous(div)>
  <Card
    TitleComponent={[Function]}
  >
    <glamorous(div)
      Card="31px"
      backgroundColor="#f7f7f7"
    >
      <glamorous(div) />
      <glamorous(div) />
    </glamorous(div)>
  </Card>
</glamorous(div)>
`;

exports[`ProductInfoCAB should render a max of two list of descriptions 1`] = `
<glamorous(div)>
  <glamorous(div)
    backgroundColor="#efefef"
    paddingTop="69px"
  />
  <Card
    TitleComponent={[Function]}
  >
    <glamorous(div)
      Card="31px"
      backgroundColor="#f7f7f7"
    >
      <glamorous(div)>
        <glamorous(div)
          fontSize="14px"
          lineHeight="20px"
        >
          <glamorous(div)
            fontSize="16px"
          >
            description0
          </glamorous(div)>
          <p>
            <span>
              label00: 
            </span>
            value00
          </p>
          <p>
            <span>
              label01: 
            </span>
            value01
          </p>
          <p>
            <span>
              label02: 
            </span>
            value02
          </p>
          <glamorous(div) />
        </glamorous(div)>
        <glamorous(div)
          fontSize="14px"
          lineHeight="20px"
        >
          <glamorous(div)
            fontSize="16px"
          >
            description01
          </glamorous(div)>
          <p>
            <span>
              label03: 
            </span>
            value03
          </p>
        </glamorous(div)>
      </glamorous(div)>
      <glamorous(div)>
        <glamorous(div)
          fontSize="14px"
          lineHeight="20px"
        >
          <glamorous(div)
            fontSize="16px"
          >
            description1
          </glamorous(div)>
          <p>
            <span>
              label04: 
            </span>
            value04
          </p>
          <p>
            <span>
              label05: 
            </span>
            value05
          </p>
          <p>
            <span>
              label06: 
            </span>
            value06
          </p>
        </glamorous(div)>
      </glamorous(div)>
    </glamorous(div)>
  </Card>
</glamorous(div)>
`;

exports[`ProductInfoCAB should render both descriptions and marketingDescriptions 1`] = `
<glamorous(div)>
  <glamorous(div)
    backgroundColor="#efefef"
    paddingTop="69px"
  >
    <glamorous(div)>
      <glamorous(div)
        fontSize="18px"
        lineHeight="28px"
      >
        <glamorous(div)
          fontSize="20px"
        >
          desc0
        </glamorous(div)>
        <p>
          foo
        </p>
        <p>
          bar
        </p>
      </glamorous(div)>
      <glamorous(div) />
    </glamorous(div)>
    <glamorous(div)>
      <glamorous(div)
        fontSize="18px"
        lineHeight="28px"
      >
        <glamorous(div)
          fontSize="20px"
        >
          desc1
        </glamorous(div)>
        <p>
          foobar
        </p>
      </glamorous(div)>
      <glamorous(div) />
    </glamorous(div)>
  </glamorous(div)>
  <Card
    TitleComponent={[Function]}
  >
    <glamorous(div)
      Card="31px"
      backgroundColor="#f7f7f7"
    >
      <glamorous(div)>
        <glamorous(div)
          fontSize="14px"
          lineHeight="20px"
        >
          <glamorous(div)
            fontSize="16px"
          >
            description0
          </glamorous(div)>
          <p>
            <span>
              label00: 
            </span>
            value00
          </p>
          <p>
            <span>
              label01: 
            </span>
            value01
          </p>
          <p>
            <span>
              label02: 
            </span>
            value02
          </p>
          <glamorous(div) />
        </glamorous(div)>
        <glamorous(div)
          fontSize="14px"
          lineHeight="20px"
        >
          <glamorous(div)
            fontSize="16px"
          >
            description01
          </glamorous(div)>
          <p>
            <span>
              label03: 
            </span>
            value03
          </p>
        </glamorous(div)>
      </glamorous(div)>
      <glamorous(div)>
        <glamorous(div)
          fontSize="14px"
          lineHeight="20px"
        >
          <glamorous(div)
            fontSize="16px"
          >
            description1
          </glamorous(div)>
          <p>
            <span>
              label04: 
            </span>
            value04
          </p>
          <p>
            <span>
              label05: 
            </span>
            value05
          </p>
          <p>
            <span>
              label06: 
            </span>
            value06
          </p>
        </glamorous(div)>
      </glamorous(div)>
    </glamorous(div)>
  </Card>
</glamorous(div)>
`;

exports[`ProductInfoCAB should render no descriptions when they are not provided 1`] = `
<glamorous(div)>
  <glamorous(div)
    backgroundColor="#efefef"
    paddingTop="69px"
  />
  <Card
    TitleComponent={[Function]}
  >
    <glamorous(div)
      Card="31px"
      backgroundColor="#f7f7f7"
    >
      <glamorous(div) />
      <glamorous(div) />
    </glamorous(div)>
  </Card>
</glamorous(div)>
`;
